--- a/web/.env
+++ b/web/.env
@@ -1,5 +1,5 @@
 VUE_APP_HOST=
 VUE_APP_MN_CONFIG_PREFIX=
 VUE_APP_MN_CONFIG_SOCKET=/ws/api/entrance/connect
-NODE_ENV=pro
+NODE_ENV=production
 VUE_APP_VERSION=v1.0.1
